--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -2026,15 +2026,16 @@ html {
     margin-top: 20px;
     box-sizing: border-box;
     height: 300px;
-    background-color: #ffffff;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     padding: 2em;
     text-align: center;
-    color: #4f575b; }
+    color: black;
+    }
     #login-wrapper #login-container .title {
-      font-size: 20px;
+      font-size: 30px;
       display: block;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      font-weight: bolder}
     #login-wrapper #login-container .remember-me {
       display: inline-block;
       vertical-align: middle;
